--- a/Research_paper/bike_sharing_gnn_prediction_paper.tex
+++ b/Research_paper/bike_sharing_gnn_prediction_paper.tex
@@ -1,3 +1,4 @@
+
 \documentclass[twocolumn,11pt]{IEEEtran}  % Start with two columns by default
 \IEEEoverridecommandlockouts
 \usepackage{cite}
@@ -25,19 +26,18 @@
     
 \begin{document}
 
-\title{GraphSAGE-Enhanced Spatial Flow Prediction: Multi-Scale OpenStreetMap Feature Integration for Urban Mobility Pattern Learning}
+\title{Mobility Pattern Learning Using Spatial Flow Prediction in Swiss Cities ; GraphSAGE with Multi-Scale OpenStreetMap Feature Integration}
 
-\author{\IEEEauthorblockN{\textsuperscript{1}Frankline Misango Oyolo, \textsuperscript{2}Prof. Michel Bierlaire, \textsuperscript{2}Dr. Stefano Bortoli}
-\IEEEauthorblockA{\textit{\textsuperscript{1}School of Computing and Data Science} \\
-The University of Hong Kong \\
-Hong Kong SAR \\
-frankline@hku.hk}
-\and
-\IEEEauthorblockA{\textit{\textsuperscript{2}Transport and Mobility Laboratory (TRANSP-OR)} \\
-École Polytechnique Fédérale de Lausanne (EPFL) \\
-Lausanne, Switzerland \\
-\{michel.bierlaire, stefano.bortoli\}@epfl.ch}
+
+\author{\IEEEauthorblockN{\textsuperscript{1} Frankline Misango Oyolo, \textsuperscript{2} Julien Coquet, \textsuperscript{3} Prof. Jeffrey Huang}
+\IEEEauthorblockA{\textit{\newline\textsuperscript
+{1} The University of Hong Kong}
+, Hong Kong SAR \\
 }
+\and
+\IEEEauthorblockA{\textit{\textsuperscript{2}ETH Zürich} , Zürich, Switzerland \\}
+\IEEEauthorblockA{\textit{\textsuperscript{3}École Polytechnique Fédérale de Lausanne (EPFL)}, Lausanne, Switzerland \\
+}}
 
 \maketitle
 
